change function on native js to jquery

--- a/test_project/templates/test_project/index.html
+++ b/test_project/templates/test_project/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav>
@@ -14,20 +15,20 @@
 {% block content %}
     <form action="{% url 'test_project:get_form_data' %}" method="post">
         {% csrf_token %}
-        <div>
-            <strong>name1</strong>
-            <input type="text" name="name1">
+        <div class="input-list">
+            <div class="input-element">
+                <strong>Name1</strong>
+                <input type="text" name="name1">
+            </div>
         </div>
         <button type="submit">Save</button>
-        <button type="reset">Rest</button>
-
+        <button type="reset">Reset all data</button>
     </form>
-    <button onclick="add_input()">Add new input</button>
-    <button onclick="remove_input()">Remove last input</button>
+
+    <button id="add_input">Add new input</button>
+    <button id="remove_input">Remove last input</button>
 
 {% endblock %}
-<script src="{% static 'js/my_js.js' %}">
-
-</script>
+<script src="{% static 'js/my_js.js' %}"></script>
 </body>
 </html>
