change name js file in index.html

--- a/test_project/templates/test_project/index.html
+++ b/test_project/templates/test_project/index.html
@@ -29,6 +29,6 @@
     <button id="remove_input">Remove last input</button>
 
 {% endblock %}
-<script src="{% static 'js/my_js.js' %}"></script>
+<script src="{% static 'js/my-js.js' %}"></script>
 </body>
 </html>
